# rover_ctrl

./: CMakeLists.txt  README.md  package.xml
config/: nav.rviz  r2d2.rviz  sim.rviz  slam.rviz  ydlidar.rviz
description/: bot_arch.xacro  gazebo_control.xacro  inertial_macros.xacro  ros2_control.xacro  rover.urdf  rover.urdf.xacro  rover.xacro  rover_core.xacro  urdf_to_xacro.zsh
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
launch/: gz_sim.launch.py  house_sim.launch.py  launch_sim.launch.py  rsp.launch.py  urdf_disp.launch.py  ydlidar.launch.py
log/: latest_build
maps/: map.pgm  map.yaml
meshes/: chassis.dae  wheel.dae  ydlidar.dae
models/maze/: model.config  model.sdf
models/unit_cylinder/: model.config  model.sdf
params/: mapper_params_online_async.yaml  ydlidar.yaml
src/rover_ctrl/: CMakeLists.txt  package.xml
src/rover_ctrl/launch/: urdf_disp.launch.py
src/rover_ctrl/urdf/: mobile_robot.gv  mobile_robot.urdf.xacro  rover.urdf.xacro  rover.xacro
worlds/: house.world  maze.world  model.sdf
worlds/models/: model.sdf
